--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/button"
         android:layout_width="351dp"
         android:layout_height="69dp"
-        android:text="First Segment"
+        android:text="First Fragment"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,7 +22,7 @@
         android:id="@+id/button2"
         android:layout_width="340dp"
         android:layout_height="68dp"
-        android:text="Second Segment"
+        android:text="Second Fragment"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,4 +30,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.178" />
+
+    <FrameLayout
+        android:layout_width="404dp"
+        android:layout_height="521dp"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="209dp">
+
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
