--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
         app:layout_constraintVertical_bias="0.178" />
 
     <FrameLayout
+        android:id="@+id/frameLayout"
         android:layout_width="404dp"
         android:layout_height="521dp"
         tools:layout_editor_absoluteX="1dp"
