--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,8 +35,12 @@
         android:id="@+id/frameLayout"
         android:layout_width="404dp"
         android:layout_height="521dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="209dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.923">
 
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
