--- a/app/myapplication/src/main/res/layout/fragment_dialog.xml
+++ b/app/myapplication/src/main/res/layout/fragment_dialog.xml
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="This is a dialog fragment"
+            android:text="Surprise ! ! !"
             android:textSize="40dp"
             android:gravity="center"
             android:textStyle="bold"/>
